deployment-minikube.bak.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: python-sqs-deployment
  annotations:
    iam.amazonaws.com/role: kube_template_role
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: python-sqs
      labels:
        app: python-sqs
    spec:
      containers:
      - name: python-sqs
        image: 077077460384.dkr.ecr.ap-southeast-2.amazonaws.com/python-sqs:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
        - name: registry-creds
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: python-sqs-svc
  labels:
    app: python-sqs-svc
    tier: web
spec:
  type: NodePort
  selector:
    app: python-sqs
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
