deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: python-sqs-deployment
  annotations:
    iam.amazonaws.com/role: kube_template_role
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      name: python-sqs
      labels:
        app: python-sqs
    spec:
      containers:
      - name: python-sqs
        image: 077077460384.dkr.ecr.ap-southeast-2.amazonaws.com/python-sqs:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            memory: "200Mi"
            cpu: "1"
          requests:
            memory: "100Mi"
            cpu: "0.5"
        args:
        - -mem-total
        - 150Mi
        - -mem-alloc-size
        - 10Mi
        - -mem-alloc-sleep
        - 1s
        - -cpus
        - "2"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: python-sqs-svc
  labels:
    app: python-sqs-svc
    tier: web
spec:
  type: NodePort
  selector:
    app: python-sqs
  ports:
    - name: http
      port: 80
      targetPort: 5000
      protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-sqs-node
spec:
  rules:
  - host: python-sqs-svc.dev.k8sinternal.com
    http:
      paths:
      - path: /
        backend:
          serviceName: python-sqs-svc
          servicePort: 80
